# Django-Repo

./: .gitignore  .python-version  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
templates/registration/: login.html  signup.html  signup_done.html  verify_success.html
templates/todo/: base.html  pagination.html  todo_create.html  todo_info.html  todo_list.html  todo_update.html
todo/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/: todo_info.html  todo_list.html
users/: cb_views.py  forms.py  models.py  urls.py  views.py
utils/: email.py
