[project]
name = "django-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "sangbo",email = "tkdqh57@naver.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
